Fixed Form Spacing on Mobile

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -2202,6 +2202,9 @@ fieldset {
             margin-top:20px;
             
         }
+        .article-container{
+            padding:30px;
+        }
 
 }
 
